# base-types

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  Rakefile  base-lib.pc.in  base-types.pc.in  base.orogen  dfki-types.pc.in  dfki.orogen  laser_readings.h  manifest.xml  test.cpp
base/: Angle.hpp  Deprecated.hpp  DeprecatedHeader.hpp  Eigen.hpp  JointLimitRange.hpp  JointLimits.hpp  JointState.hpp  JointTransform.hpp  JointsTrajectory.hpp  NamedVector.hpp  Odometry.hpp  Point.hpp  Pose.hpp  Pressure.hpp  Robot.hpp  Temperature.hpp  Time.hpp  TimeMark.hpp  Trajectory.hpp  TransformWithCovariance.hpp  TransformWithUncertainty.hpp  Transformation.hpp  Twist.hpp  TwistWithCovariance.hpp  Waypoint.hpp  Wrench.hpp  WrenchState.hpp  angle.h  base_types.h  eigen.h  float.h  imu_readings.h  laser_readings.h  linear_algebra.h  motion_command.h  odometry.h  pose.h  position.h  system_state.h  temperature.h  (+4 more)
base/actuators/: commands.h  status.h  vehicles.h
base/backward/: angle.h  spline.h
base/commands/: AUVMotion.hpp  AUVPosition.hpp  Joints.hpp  LinearAngular6DCommand.hpp  Motion2D.hpp  Speed6D.hpp
base/samples/: BodyState.hpp  CommandSamples.hpp  CompressedFrame.hpp  DepthMap.hpp  DistanceImage.hpp  Frame.hpp  Joints.hpp  LaserScan.hpp  PointCloud.hpp  Pointcloud.hpp  Pressure.hpp  RigidBodyAcceleration.hpp  RigidBodyState.hpp  Sonar.hpp  SonarBeam.hpp  SonarScan.hpp  Wrench.hpp  Wrenches.hpp  audio.h  compressed_frame.h  distance_image.h  frame.h  imu.h  kinematic_state.h  laser_scan.h  pointcloud.h  rigid_body_acceleration.h  rigid_body_state.h  sonar_beam.h  sonar_scan.h
base/templates/: TimeStamped.hpp
base/vehicles/: Wheel4.hpp
bindings/python/: README.md  (+5 more)
bindings/ruby/: CMakeLists.txt  Manifest.txt  README.markdown  manifest.xml
bindings/ruby/ext/base_types/: Eigen.cpp  Spline.cpp  extconf.rb
bindings/ruby/ext/base_types_ruby/: Eigen.cpp  Spline.cpp  init.cpp
bindings/ruby/lib/: eigen.rb
bindings/ruby/lib/base/: float.rb  typelib_plugin.rb
bindings/ruby/lib/base/geometry/: spline.rb
bindings/ruby/lib/base/typelib/: eigen.rb  joint_state.rb  named_vector.rb  rigid_body_state.rb  spline.rb  time.rb  transform_with_covariance.rb
bindings/ruby/lib/base/typelib/samples/: body_state.rb  joints.rb
bindings/ruby/lib/sisl/: spline.rb
bindings/ruby/test/: test_affine3.rb  test_angleaxis.rb  test_float.rb  test_isometry3.rb  test_matrix4.rb  test_matrixx.rb  test_quaternion.rb  test_spline.rb  test_vector3.rb  test_vectorx.rb
bindings/ruby/test/typelib/: base.tlb  test_spline.rb
cmake/: DownloadBoost.cmake  FindBoost.cmake  FindGem.cmake  FindNumpy.cmake  FindRTEMS.cmake  FindRuby.cmake  FindSISL.cmake  ListMacros.cmake  PythonBind.cmake  PythonInstallPath.cmake  Rock.cmake  RockRuby.cmake  rock-config.cmake.in
dfki/: base_types.h  gps_readings.h  imu_readings.h  laser_readings.h  linear_algebra.h  orientation.h  system_state.h  time.h
ext/: Eigen.cpp  Spline.cpp  extconf.rb  init.cpp
lib/: eigen.rb
src/: Acceleration.cpp  Acceleration.hpp  Angle.cpp  Angle.hpp  CMakeLists.txt  CircularBuffer.hpp  Deprecated.hpp  Eigen.hpp  Float.hpp  JointLimitRange.cpp  JointLimitRange.hpp  JointLimits.cpp  JointLimits.hpp  JointState.cpp  JointState.hpp  JointTransform.cpp  JointTransform.hpp  JointsTrajectory.cpp  JointsTrajectory.hpp  LogMessage.hpp  Logging.hpp  Matrix.hpp  NURBSCurve3D.cpp  NURBSCurve3D.h  Pose.cpp  Pose.hpp  Pressure.cpp  Pressure.hpp  RigidBodyStateSE3.cpp  RigidBodyStateSE3.hpp  Singleton.hpp  Spline.cpp  Spline.hpp  Temperature.cpp  Temperature.hpp  Time.cpp  Time.hpp  TimeMark.cpp  TimeMark.hpp  Timeout.cpp  (+21 more)
src/commands/: Motion2D.cpp  Motion2D.hpp
src/logging/: logging_iostream_style.h  logging_printf_style.cpp  logging_printf_style.h  terminal_colors.h
src/samples/: Acceleration.hpp  BodyState.cpp  BodyState.hpp  BoundingBox.cpp  BoundingBox.hpp  CompressedFrame.cpp  CompressedFrame.hpp  DepthMap.cpp  DepthMap.hpp  DistanceImage.cpp  DistanceImage.hpp  Event.hpp  EventArray.hpp  Frame.cpp  Frame.hpp  IMUSensors.hpp  Joints.cpp  Joints.hpp  LaserScan.cpp  LaserScan.hpp  OrientedBoundingBox.cpp  OrientedBoundingBox.hpp  Pointcloud.hpp  PoseWithCovariance.cpp  PoseWithCovariance.hpp  Pressure.cpp  Pressure.hpp  Radar.cpp  Radar.hpp  RigidBodyAcceleration.cpp  RigidBodyAcceleration.hpp  RigidBodyState.cpp  RigidBodyState.hpp  RigidBodyStateSE3.hpp  RigidBodyStateSE3Vector.hpp  Sonar.cpp  Sonar.hpp  SonarBeam.cpp  SonarBeam.hpp  SonarScan.cpp  (+6 more)
src/templates/: TimeStamped.hpp
test/: CMakeLists.txt  bench_func.cpp  bench_func.h  benchmark.cpp  test.cpp  test_Angle.cpp  test_DepthMapVisualization.cpp  test_Eigen.cpp  test_JointLimitRange.cpp  test_JointLimits.cpp  test_RigidBodyStateSE3.cpp  test_Spline.cpp  test_Temperature.cpp  test_Time.cpp  test_Timeout.cpp  test_backwards.cpp  test_matrixx.rb  test_quaternion.rb  test_samples_Sonar.cpp  test_spline.rb  test_vector3.rb
toolkit/: dfkiToolkitUser.cpp  dfkiToolkitUser.hpp
viz/: BodyStateVisualization.cpp  BodyStateVisualization.hpp  CMakeLists.txt  DepthMapVisualization.cpp  DepthMapVisualization.hpp  DistanceImageVisualization.cpp  DistanceImageVisualization.hpp  LaserScanVisualization.cpp  LaserScanVisualization.hpp  MotionCommandVisualization.cpp  MotionCommandVisualization.hpp  OrientedBoundingBoxVisualization.cpp  OrientedBoundingBoxVisualization.hpp  PluginLoader.cpp  PluginLoader.hpp  PointcloudVisualization.cpp  PointcloudVisualization.hpp  RigidBodyStateSE3Visualization.cpp  RigidBodyStateSE3Visualization.hpp  RigidBodyStateVisualization.cpp  RigidBodyStateVisualization.hpp  SonarBeamVisualization.cpp  SonarBeamVisualization.hpp  SonarGroundDistanceVisualization.cpp  SonarGroundDistanceVisualization.hpp  SonarVisualization.cpp  SonarVisualization.hpp  TrajectoryVisualization.cpp  TrajectoryVisualization.hpp  Uncertainty.cpp  Uncertainty.hpp  Vizkit3DHelper.cpp  Vizkit3DHelper.hpp  WaypointVisualization.cpp  WaypointVisualization.hpp  WrenchModel.cpp  WrenchModel.hpp  WrenchVisualization.cpp  WrenchVisualization.hpp  base-viz-qt5.pc.in  (+2 more)
(+47 files in other folders)
